update folio, resize images

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,17 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/MCP_Rev_2020.png" alt="MCP Review Image">
+                            <img class="card-img-top" src="assets/img/Manuscript/ABC_PGC_2022.png" alt="ABC PGC TOC Figure">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Complementary proteome and glycoproteome access revealed through comparative 
+                                                       analysis of reversed phase and porous graphitic carbon chromatography</h5>
+                                <p class="card-text">First reports of porous graphitic carbon for untargeted glycoproteomics compared
+                                                     to traditional reversed phase liquid chromatography</p>
+                                <a href="https://doi.org/10.1007/s00216-022-03934-7" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/MCP_Rev_2020.png" alt="MCP Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation</h5>
                                 <p class="card-text">Review of experimental considerations and advancements for quantitative glycomics and
@@ -101,7 +111,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/RSC_Rev_2021.png" alt="RSC-ChemBio Review Image">
+                            <img class="card-img-top" src="assets/img/Manuscript/RSC_Rev_2021.png" alt="RSC-ChemBio Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Recent developments and applications of quantitative proteomics strategies for high-throughput biomolecular analyses in cancer research</h5>
                                 <p class="card-text">Review of recent applications and associated advancements in quantitative proteomics
@@ -110,7 +120,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/ECM_Nat_Com.png" alt="MCP Review Image">
+                            <img class="card-img-top" src="assets/img/Manuscript/ECM_Nat_Com.png" alt="MCP Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Proteome-wide and Matrisome-specific Alterations during Human Pancreas Development and Maturation</h5>
                                 <p class="card-text">This comprehensive proteomics analysis contributes to an improved understanding of the critical roles that 
@@ -119,7 +129,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Peroxy_Abs.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Manuscript/Peroxy_Abs.jpeg" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Peroxymonosulfate Oxidizes Amino Acids in Water without Activation</h5>
                                 <p class="card-text">Peroxymonosulfate is capable of oxidizing 19 amino acids without explicit activation and
@@ -129,7 +139,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/TrAC_2019.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Manuscript/TrAC_2019.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Improved Structural Elucidation of Peptide Isomers and
                                                     Their Receptors Using Advanced Ion Mobility-Mass Spectrometry</h5>
@@ -140,7 +150,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/ACPP.jpeg" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Manuscript/ACPP.jpeg" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Finding Biomass Degrading Enzymes Through an Activity-Correlated
                                                     Quantitative Proteomics Platform (ACPP)</h5>
@@ -152,6 +162,46 @@
                     </div>
                     <div class="row">
                         <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2022). "Complementary Proteome and Glycoproteome Access Revealed 
+                            Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography." <i>Anal. Bioanal. Chem.</i> Published 
+                            online February 9, 2022. <a href="https://doi.org/10.1007/s00216-022-03934-7" class="href">10.1007/s00216-022-03934-7</a>
+                        </p>
+                        <p class="pub-text">
+                            X. Zhong†, <b>D.G. Delafield†</b>, L. Li, (2022). "Data Independent Acquisition Mass Spectrometry Enables Profiling of Metabolic Dysregulation
+                            In Response to Neurological Degeneration" <i>Analytical Chemistry</i>. In preparaton.
+                        </p>
+                        <p class="pub-text">
+                            G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
+                            "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>Angewante Chemie</i>, in revision.
+                        </p>
+                        <p class="pub-text">
+                            Y. Liu, <b>D.G. Delafield</b>, L. Li (2021) "Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
+                            Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>, to be submitted.
+                        </p>
+                        <p class="pub-text">
+                            Y Shi, Z. Li, <b>D.G. Delafield</b>, Z. Ye, H. Ye, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2022) "A Novel Mass 
+                            Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
+                            Biological Samples." <i>Analytical Chemistry</i>, in submission.
+                        </p>
+                        <p class="pub-text">
+                            X. Zhong, D. C. Frost, Q. Yu, M. Li, T.J. Gu, <b>D.G. Delafield</b>, L. Li (2021) "Mass Defect-based DiLeu
+                            Tagging for Multiplexed Data-Independent Acquisition," <i>Analytical Chemistry</i>, to be submitted.
+                        </p>
+                        <p class="pub-text">
+                            H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). "Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
+                            Cancer Biomolecular Analyses in Cancer Research." <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
+                            10.1039/D1CB00039J</a>
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, Li, L., (2020). "Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation." 
+                            <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
+                                10.1074/mcp.R120.002095</a>
+                        </p>
+                        <p class="pub-text">
+                            Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
+                                V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) "Proteome-wide and Matrisome-specific Alterations 
+                                during Human Pancreas Development and Maturation," <i>Nature Communications</i>. Published online February 15. 2021.
+                                <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
                             <b>D.G. Delafield</b>, Li, L., (2020). “Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation.” 
                             <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
                                 10.1074/mcp.R120.002095.</a>
@@ -234,7 +284,7 @@
                     <h2 class="mb-5">Posters</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Posters/ASMS 2021.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2021_thumb.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">High Resolution Demultiplexing Ion Mobility: A New Paradigm for Intact Glycopeptide
                                                        Structural Assignment</h5>
@@ -252,7 +302,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Posters/ASMS 2019.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2019_thumb.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Pursuit of Bottom-Up, Middle-Down, and Top-Down Glycoconjugate Analysis Through CE-ESI-MS</h5>
                                 <p class="card-text">ASMS 2019</p>
@@ -260,7 +310,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Posters/ASMS 2018.png" alt="Card image cap">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2018_thumb.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Characterization Analysis of Through Arrical Time Correlation Using Concurrent RPLC Fraction
                                                     Fraction Monitoring and FAIMS Filtering</h5>
@@ -269,7 +319,7 @@
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="assets/img/Posters/ASMS 2017.png" alt="MCP Review Image">
+                            <img class="card-img-top" src="assets/img/Posters/ASMS 2017_thumb.png" alt="MCP Review Image">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Three-Dimensionsal Platform for N-Linked Glycopeptide Separation and Analysis</h5>
                                 <p class="card-text">ASMS 2017</p>
