--- a/portfolio.html
+++ b/portfolio.html
@@ -167,48 +167,68 @@
                             online February 9, 2022. <a href="https://doi.org/10.1007/s00216-022-03934-7" class="href">10.1007/s00216-022-03934-7</a>
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, A. Phetsanthad, L. Li (2021). “Gas Phase Fractionation, Data-Independent Acquisition for Improved Profiling Depth in Microfluidic 
-                            Capillary Electrophoresis Mass Spectrometry.” (In Preparation)
+                            <b>D.G. Delafield†</b>, H.N. Miles†, L. Li, (2021). "Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
+                            Cancer Biomolecular Analyses in Cancer Research." <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
+                            10.1039/D1CB00039J</a> (†Co-first authors)
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, D. Wang, H.N. Miles, L. Li (2021). “Biphasic Reversed-Phase, Porous Graphitic Carbon Capillary Columns facilitates Comprehensive 
-                            Bottom-up Glycoproteomics.” (In Preparation)
+                            <b>D.G. Delafield</b>, L. Li, (2020). "Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation." 
+                            <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
+                                10.1074/mcp.R120.002095</a>
                         </p>
                         <p class="pub-text">
-                            <b>D.G. Delafield</b>, H.N. Miles, L. Li (2021). “High Temperature Porous Graphitic Carbon Enables Isomeric Separation of Intact Glycopeptides but Reduces 
-                            Quantitative Accuracy.” (In Preparation)
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li (2021). “Higher Temperature Porous Graphitic Carbon Separations 
+                            Differentially Impact Distinct Glycopeptide Classes.” (In Preparation)
                         </p>
                         <p class="pub-text">
-                            X. Zhong†, <b>D.G. Delafield†</b>, L. Li, (2022). "Data Independent Acquisition Mass Spectrometry Enables Profiling of Metabolic Dysregulation
-                            In Response to Neurological Degeneration" <i>Analytical Chemistry</i>. In preparaton.
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. “Six-plex Isobaric Labeling Reveals Glycosylation Dysregulation Across 
+                            Benign, Metastatic, and Tumorigenic Prostate Cancer.” (In Preparation)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li.  “Non-tryptic Enzymatic Cleavage for Improved PGC-Based Glycoproteomic 
+                            Profiling.” (In preparation)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, A. Phetsanthad, L. Li (2021). “Gas Phase Fractionation, Data-Independent Acquisition for Improved 
+                            Profiling Depth in Microfluidic Capillary Electrophoresis Mass Spectrometry.” (In Preparation)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, D. Wang, H.N. Miles, L. Li (2021). “Biphasic Reversed-Phase, Porous Graphitic Carbon Capillary Columns 
+                            Facilitates Comprehensive Bottom-up Glycoproteomics.” (In Preparation)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li, (2022). "Data Independent Acquisition Mass Spectrometry Enables Profiling of 
+                            Metabolic Dysregulation In Response to Neurological Degeneration" (In preparaton) († Co-First Authors)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield†</b>, X. Zhong†, L. Li. "Enhanced Proteomic Coverage Enabled through BoxCar DIA and Sample Agnostic Spectral 
+                            Libraries." (In preparation) († Co-First Authors)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Sample Agnostic Spectral Libraries Reveal Underlying Molecular Pathways in 
+                            Aggressive Metastatic Prostate Cancer." (In preparation)
+                        </p>
+                        <p class="pub-text">
+                            <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
+                            Capacity in Omics Applications and Structural Investigations.” (In submission)
                         </p>
                         <p class="pub-text">
                             G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
-                            "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>Angewante Chemie</i>, in revision.
+                            "Site-specific Chirality-conferred Structural Compaction Differentially Rescues the Cytotoxicity of Aβ42" <i>Angewante 
+                            Chemie</i>, Under revision.
                         </p>
                         <p class="pub-text">
                             Y. Liu, <b>D.G. Delafield</b>, L. Li "Comprehensive Mass Spectrometric Characterization of Neuropeptidome in 
                             Nervous System of the Atlantic Blue Crab, Callinectes sapidus," <i>Analytical Chemistry</i>, to be submitted.
                         </p>
                         <p class="pub-text">
-                            Y Shi, Z. Li, <b>D.G. Delafield</b>, Z. Ye, H. Ye, X. Shi, B. Wang, Z. Chen, F. Ma, L. Li (2022) "A Novel Mass 
-                            Spectrometry-based Method for Qualitative and Quantitative Analysis of Citrullinated Proteins from Complex 
-                            Biological Samples." <i>Analytical Chemistry</i>, in submission.
+                            Y Shi, Z. Li, B. Wang, Z. Ye, H. Ye, <b>D.G. Delafield</b>, X. Shi, Z. Chen, F. Ma, L. Li (2022) "Enabling Global Analysis of Protein 
+                            Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Chemical Science</i>. In submission.
                         </p>
                         <p class="pub-text">
                             M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2021) 
                             “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
-                            Fragile X Syndrome Mouse Model”. Nature Communications. Under revision.
-                        </p>
-                        <p class="pub-text">
-                            H.N. Miles†, <b>D.G. Delafield†</b>, L. Li, (2021). "Recent Developments and Applications of Quantitative Proteomics Strategies for High-Throughput 
-                            Cancer Biomolecular Analyses in Cancer Research." <i>RSC Chemical Biology</i>. Published online May 15, 2021. <a href="http://dx.doi.org/10.1039/D1CB00039J">
-                            10.1039/D1CB00039J</a>
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield</b>, Li, L., (2020). "Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation." 
-                            <i>Molecular & Cellular Proteomics</i>. Published online June 23, 2020. <a href="https://doi.org/10.1074/mcp.R120.002095">
-                                10.1074/mcp.R120.002095</a>
+                            Fragile X Syndrome Mouse Model”. Nature Communications. In Submission.
                         </p>
                         <p class="pub-text">
                             Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
