--- a/index.html
+++ b/index.html
@@ -269,20 +269,20 @@
                         Citrullination and Homocitrullination via Biotin Thiol Tag-Assisted Mass Spectrometry." <i>Chemical Science</i>. In submission.
                     </p>
                     <p class="pub-text">
-                        M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2021) 
+                        M. Ma, Q. Yu, <b>D.G. Delafield</b>, Y. Cui, Z. Li, W. Wu, X. Shi, A. Gutierrez, P.R. Westmark, M. Xu, C.J. Westmark, L. Li (2022) 
                         “On-tissue Spatial Proteomics Integrating MALDI-MS Imaging with Shotgun Proteomics Reveals Soy Consumption-induced Biomarkers in a 
                         Fragile X Syndrome Mouse Model”. Nature Communications. In Submission.
                     </p>
                     <p class="pub-text">
-                        Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
-                        V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) "Proteome-wide and Matrisome-specific Alterations 
-                        during Human Pancreas Development and Maturation," <i>Nature Communications</i>. Published online February 15. 2021.
-                        <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
+                        N. Wang, N. Wang, S. Yu, H. Zhang, S. Tang, D. Wang, W. Lu, H. Li, <b>D.G. Delafield</b>, 
+                        Y. Kong, X. Wang, C. Shao, L. Lv, G. Wang, R. Tan, N. Wang, H. Hao, H. Ye (2022) “Cyclic Immonium Ion 
+                        of Lactyllysine Reveals Widespread Lactylation in the Human Proteome” <i>Nature Methods</i>. Published online June 28, 2022.
+                        <a href="https://www.nature.com/articles/s41592-022-01523-1">10.1038/s41592-022-01523-1</a>
                     </p>
                     <p class="pub-text">
                         Z. Li, D. M. Tremmel, F. Ma, Q. Yu, M. Ma, <b>D.G. Delafield</b>, Y. Shi, B. Wang, S. A. Mitchell, A. K. Feeney,
-                        V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) “Proteome-wide and Matrisome-specific Alterations 
-                        during Human Pancreas Development and Maturation,” <i>Nature Communications</i>. Published online February 15. 2021.
+                        V. S. Jain, S. D. Sackett, J. S. Odorico, L. Li (2020) "Proteome-wide and Matrisome-specific Alterations 
+                        during Human Pancreas Development and Maturation," <i>Nature Communications</i>. Published online February 15, 2021.
                         <a href="https://www.nature.com/articles/s41467-021-21261-w">10.1038/s41467-021-21261-w</a>
                     </p>
                     <p class="pub-text">
