adding publication card

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,13 +92,22 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/NatMeth_LactylLysine.png" alt="Nat Methods Figure 1">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Cyclic immonium ion of lactyllysine reveals widespread lactylation in the human proteome</h5>
+                                <p class="card-text">A novel diagnostic ion-based strategy, to confidently identify new lactylation events, unveiling a 
+                                                     wide lactylproteome landscape that had previously been confined to lactylated histones</p>
+                                <a href="https://www.nature.com/articles/s41592-022-01523-1" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/ABC_PGC_2022.png" alt="ABC PGC TOC Figure">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Complementary proteome and glycoproteome access revealed through comparative 
                                                        analysis of reversed phase and porous graphitic carbon chromatography</h5>
                                 <p class="card-text">First reports of porous graphitic carbon for untargeted glycoproteomics compared
                                                      to traditional reversed phase liquid chromatography</p>
-                                <a href="https://doi.org/10.1007/s00216-022-03934-7" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://doi.org/10.1007/s00216-022-03934-7" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -107,7 +116,7 @@
                                 <h5 class="card-title">Recent Advances in Analytical Approaches for Glycan and Glycopeptide Quantitation</h5>
                                 <p class="card-text">Review of experimental considerations and advancements for quantitative glycomics and
                                                      glycopeptidomics over the years 2010-2020.</p>
-                                <a href="https://doi.org/10.1074/mcp.R120.002095" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://doi.org/10.1074/mcp.R120.002095" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -116,7 +125,7 @@
                                 <h5 class="card-title">Recent developments and applications of quantitative proteomics strategies for high-throughput biomolecular analyses in cancer research</h5>
                                 <p class="card-text">Review of recent applications and associated advancements in quantitative proteomics
                                                      applications in cancer research.</p>
-                                <a href="https://doi.org/10.1039/D1CB00039J" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://doi.org/10.1039/D1CB00039J" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -125,7 +134,7 @@
                                 <h5 class="card-title">Proteome-wide and Matrisome-specific Alterations during Human Pancreas Development and Maturation</h5>
                                 <p class="card-text">This comprehensive proteomics analysis contributes to an improved understanding of the critical roles that 
                                                      ECM plays throughout human pancreas development and maturation.</p>
-                                <a href="https://www.nature.com/articles/s41467-021-21261-w" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://www.nature.com/articles/s41467-021-21261-w" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -135,7 +144,7 @@
                                 <p class="card-text">Peroxymonosulfate is capable of oxidizing 19 amino acids without explicit activation and
                                                     that solvent-exposed methionine and tryptophan residues are likely initial targets of
                                                     oxidation in peptides and proteins.</p>
-                                <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://pubs.acs.org/doi/abs/10.1021/acs.est.9b01322" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -146,7 +155,7 @@
                                 <p class="card-text">We explore the usefulness of ion mobility techniques in probing structurally-critical
                                                     biomolecules, examining the ability of current methods to elucidate neuropeptide
                                                     stereoisomers and receptors.</p>
-                                <a href="https://doi.org/10.1016/j.trac.2019.05.048" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://doi.org/10.1016/j.trac.2019.05.048" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                         <div class="card" style="width: 18rem;">
@@ -156,7 +165,7 @@
                                                     Quantitative Proteomics Platform (ACPP)</h5>
                                 <p class="card-text">The results demonstrated that the ACPP facilitated the discovery of bioactive enzymes
                                                     from complex protein samples in a high-throughput, multiplexing, and untargeted fashion.</p>
-                                <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509" class="mt-auto btn btn-primary">Read</a>
+                                <a href="https://pubs.acs.org/doi/10.1007/s13361-016-1569-8" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
                     </div>
@@ -257,7 +266,7 @@
                         <p class="pub-text">
                             Ma, H., <b>D.G. Delafield</b>, Z. Wang, J. You and S. Wu (2017). "Finding Biomass Degrading Enzymes 
                             Through an Activity-Correlated Quantitative Proteomics Platform (ACPP)." <i>Journal of American 
-                            for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/abs/10.1021/jasms.8b05509">
+                            for Mass Spectrometry</i>. 28, 655-663. <a href="https://pubs.acs.org/doi/10.1007/s13361-016-1569-8">
                             10.1021/jasms.8b05509</a>
                         </p>
                     </div>
