--- a/portfolio.html
+++ b/portfolio.html
@@ -279,6 +279,15 @@
                     <h2 class="mb-5">Posters</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Posters/ChemPoster2022_thumb.png" alt="Card image cap">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Sample Agnostic Spectral Libraries Enhance Proteomic Coverage in Sample-Limited Data 
+                                                       Independent Analyses</h5>
+                                <p class="card-text">Chemistry Research Presentation 2022</p>
+                                <a href="assets/img/Posters/ChemPoster2022.png" target="_blank" class="mt-auto btn btn-primary">View Poster</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Posters/ASMS 2022_thumb.png" alt="Card image cap">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Evaluation of Porous Graphitic Carbon at Elevated Temperatures for Glycopeptide Analyses: 
@@ -338,6 +347,15 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Oral Presentations</h2>
                     <div class="card-table">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Presentations/GrahamDelafield_SampAgnLib_WPS2022.png" alt="WPS 2022">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">Sample Agnostic Spectral Libraries: An Open Framework For Enhanced
+                                                       Data Independent Analysis Profiling Depth</h5>
+                                <p class="card-text">Wisconsin Proteomics Symposium 2022</p>
+                                <a href="assets/img/Presentations/GrahamDelafield_SampAgnLib_WPS2022.pdf" target="blank" class="mt-auto btn btn-primary">View</a>
+                            </div>
+                        </div>
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Presentations/ACS_2021.png" alt="ACS Fall Meeting 2021">
                             <div class="card-body d-flex flex-column">
