adding trac_hrims review

--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
                         </button>
                     </div>
                     <p class="pub-text">
+                        <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
+                        Capacity in Omics Applications and Structural Investigations.” <i>Trends in Analytical Chemistry.</i> Published online August 24, 2022.
+                        <a href="https://doi.org/10.1016/j.trac.2022.116761">10.1016/j.trac.2022.116761</a>
+                    </p>
+                    <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2022). "Complementary Proteome and Glycoproteome Access Revealed 
                         Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography." <i>Anal. Bioanal. Chem.</i> Published 
                         online February 9, 2022. <a href="https://doi.org/10.1007/s00216-022-03934-7" class="href">10.1007/s00216-022-03934-7</a>
@@ -250,10 +255,6 @@
                     <p class="pub-text">
                         <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Sample Agnostic Spectral Libraries Reveal Underlying Molecular Pathways in 
                         Aggressive Metastatic Prostate Cancer." (In preparation)
-                    </p>
-                    <p class="pub-text">
-                        <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
-                        Capacity in Omics Applications and Structural Investigations.” (In submission)
                     </p>
                     <p class="pub-text">
                         G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
