--- a/portfolio.html
+++ b/portfolio.html
@@ -92,11 +92,21 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="card-table">
                         <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src="assets/img/Manuscript/TrAC_2022.png" alt="TrAC Graphical Abstract">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical Capacity in Omics 
+                                    Applications and Structural Investigations</h5>
+                                <p class="card-text">Review of high-end ion mobility instrumentation and their suitability in metabolomics/proteomics investigations,
+                                    as well as their capacity for structural elucidation.</p>
+                                <a href="https://doi.org/10.1016/j.trac.2022.116761" target="_blank" class="mt-auto btn btn-primary">Read</a>
+                            </div>
+                        </div>
+                        <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="assets/img/Manuscript/NatMeth_LactylLysine.png" alt="Nat Methods Figure 1">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">Cyclic immonium ion of lactyllysine reveals widespread lactylation in the human proteome</h5>
                                 <p class="card-text">A novel diagnostic ion-based strategy, to confidently identify new lactylation events, unveiling a 
-                                                     wide lactylproteome landscape that had previously been confined to lactylated histones</p>
+                                                     wide lactylproteome landscape that had previously been confined to lactylated histones.</p>
                                 <a href="https://www.nature.com/articles/s41592-022-01523-1" target="_blank" class="mt-auto btn btn-primary">Read</a>
                             </div>
                         </div>
@@ -171,6 +181,11 @@
                     </div>
                     <div class="row">
                         <p class="pub-text">
+                            <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
+                            Capacity in Omics Applications and Structural Investigations.” <i>Trends in Analytical Chemistry.</i> Published online August 24, 2022.
+                            <a href="https://doi.org/10.1016/j.trac.2022.116761">10.1016/j.trac.2022.116761</a>
+                        </p>
+                        <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, Y. Liu, W.A. Ricke, L. Li, (2022). "Complementary Proteome and Glycoproteome Access Revealed 
                             Through Comparative Analysis of Reversed Phase and Porous Graphitic Carbon Chromatography." <i>Anal. Bioanal. Chem.</i> Published 
                             online February 9, 2022. <a href="https://doi.org/10.1007/s00216-022-03934-7" class="href">10.1007/s00216-022-03934-7</a>
@@ -216,10 +231,6 @@
                         <p class="pub-text">
                             <b>D.G. Delafield</b>, H.N. Miles, W.A. Ricke, L. Li. "Sample Agnostic Spectral Libraries Reveal Underlying Molecular Pathways in 
                             Aggressive Metastatic Prostate Cancer." (In preparation)
-                        </p>
-                        <p class="pub-text">
-                            <b>D.G. Delafield</b>, C. Kaminsky, G. Liu, L. Li. “High-End Ion Mobility Mass Spectrometry:  A Current Review of Analytical 
-                            Capacity in Omics Applications and Structural Investigations.” (In submission)
                         </p>
                         <p class="pub-text">
                             G. Li, C. Jeon, M. Ma, Z. Zheng, <b>D.G. Delafield</b>, E. Romanova, J. Sweedler, B. Ruotolo, L. Li,
