adding awards and new cv

--- a/index.html
+++ b/index.html
@@ -459,6 +459,14 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Luminex Summer Fellowship, Department of Chemistry (2022)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Department of Chemistry Research Travel Award (2022)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Harold Hay Fellowship, Department of Chemistry (2022)
                         </li>
                         <li>
